[package]
name = "light-strip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.14.1"
palette = "0.7.3"
rumqttc = "0.22.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
log = "0.4.20"
systemd-journal-logger = "1.0.0"
simple_logger = "4.2.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
smart_led_effects = "0.1.2"
# smart_led_effects = {"path" = "../smart_led_effects"}
lazy_static = "1.4.0"
colortemp = "0.1.0"

# [build]
# target = "armv7-unknown-linux-musleabihf"